moved to sub folder

--- a/Examples/LedBar/LedBar.csproj
+++ b/Examples/LedBar/LedBar.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\RaspiCore\RaspiCore.csproj" />
+    <ProjectReference Include="..\..\src\RaspiCore\RaspiCore.csproj" />
   </ItemGroup>
 
 </Project>
